<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.Login_Activity"
    android:background="@color/mainlight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20sp">
    <TextView
        fontPath="fonts/Bold.otf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="40sp"
        android:textColor="@color/white"
        />
        <TextView
            fontPath="fonts/light.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginpagedes"
            android:layout_marginTop="2dp"
            android:textColor="@color/graylight"
            android:textSize="16sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:background="@drawable/sideround_bg"
            android:padding="10dp"
            >
            <TextView
                fontPath="fonts/SemiBold.otf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/firsttime"
                android:textSize="16sp"
                android:textColor="@color/maindark"
                />
            <TextView
                fontPath="fonts/light.otf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/firsttimeloginDes"
                android:textColor="@color/mainlight"
                android:layout_marginTop="5dp"
                />
        </LinearLayout>

        <!--TODO go to instagram button-->
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="30dp"
            android:layout_marginBottom="10dp"

            >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="20dp"
                android:onClick="login"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                >
                <TextView
                    fontPath="fonts/Bold.otf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gotoinstagram"
                    android:layout_gravity="center"
                    android:textColor="@color/mainlight"
                    android:textSize="16sp"
                    />
            </FrameLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>