<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.Settings_fragment"
    android:orientation="vertical">

   <!--TODO logo layout-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingEnd="10dp"
        >

        <FrameLayout
            android:id="@+id/logoimg_FL"
            android:layout_width="40dp"
            android:layout_height="40dp"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_logo_like"
                />
        </FrameLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_toEndOf="@id/logoimg_FL"
           android:paddingStart="10dp"
           >
           <TextView
               fontPath="fonts/SemiBold.otf"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/app_name"
               android:textColor="@color/maindark"
               android:textSize="16sp"
               />
            <TextView
               fontPath="fonts/light.otf"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/version"
               android:textColor="@color/txtcolor"/>
       </LinearLayout>
    </RelativeLayout>

    <!--TODO View Horizontal-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/graylight"
        />

    <!--TODO Account Actions-->
    <TextView
        fontPath="fonts/Bold.otf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accountaction"
        android:textSize="16sp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/maindark"
        />
    <LinearLayout
        android:id="@+id/logout_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:paddingEnd="10dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        >
        <FrameLayout
            android:layout_width="30dp"
            android:layout_height="30dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_userprofile"
                android:tint="@color/iconcolor"
                />
        </FrameLayout>
        <TextView
            fontPath="fonts/SemiBold.otf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/logout"
            android:paddingStart="10dp"
            android:layout_gravity="center"
            android:gravity="start|center"
            android:textColor="@color/txtcolor"
            />

    </LinearLayout>


    <!--TODO View Horizontal-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/graylight"
        />


    <!--TODO Links layout-->
    <TextView
        fontPath="fonts/Bold.otf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/links"
        android:textSize="16sp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/maindark"
        />
    <!--TODO #Terms of Service-->
    <LinearLayout
        android:id="@+id/termsService_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        >
        <FrameLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="5dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_briefcase"
                android:tint="@color/iconcolor"
                />
        </FrameLayout>
        <TextView
            fontPath="fonts/SemiBold.otf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/termsofservice"
            android:paddingStart="10dp"
            android:layout_gravity="center"
            android:gravity="start|center"
            android:textColor="@color/txtcolor"
            />

    </LinearLayout>

    <!--TODO # End user license agreement(EULA)-->
    <LinearLayout
        android:id="@+id/end_user_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        >
        <FrameLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="5dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_contract"
                android:tint="@color/iconcolor"
                />
        </FrameLayout>
        <TextView
            fontPath="fonts/SemiBold.otf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enduserlicense"
            android:paddingStart="10dp"
            android:layout_gravity="center"
            android:gravity="start|center"
            android:textColor="@color/txtcolor"
            />

    </LinearLayout>

    <!--TODO # Privacy policy-->
    <LinearLayout
        android:id="@+id/privacyPolicy_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"



        >
        <FrameLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="5dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_privacy"
                android:tint="@color/iconcolor"
                />
        </FrameLayout>
        <TextView
            fontPath="fonts/SemiBold.otf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/privacypolicy"
            android:paddingStart="10dp"
            android:layout_gravity="center"
            android:gravity="start|center"
            android:textColor="@color/txtcolor"
            />

    </LinearLayout>

</LinearLayout>