<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.likeFragment.Likes_fragment">

    <!--TODO Earn Like container(Automatically option)-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_bg"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            fontPath="fonts/Bold.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/earnlikes"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView

            fontPath="fonts/light.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/likes_discription"
            android:textColor="@color/graylight" />

        <!--TODO automatic like toggle button-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:padding="15dp"
                android:weightSum="2">

                <TextView
                    fontPath="fonts/light.otf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/likeautmatically_txt"
                    android:textSize="14sp"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:theme="@style/SwitchThemeOverlay"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <!--TODO automatically like Switch on-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:visibility="gone"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <!--TODO Available-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp">

                    <TextView
                        android:id="@+id/avail_txt"
                        fontPath="fonts/SemiBold.otf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/timeelapsed"
                        android:textColor="@color/mainlight"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/avail_txt"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_width="20dp"
                            android:layout_height="20dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_clock"
                                android:tint="@color/iconcolor"
                                 />
                        </FrameLayout>

                        <TextView
                            android:id="@+id/aval_likes_TV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="5dp"
                            android:text="17 Likes"
                            android:textColor="@color/txtcolor" />
                    </LinearLayout>

                </RelativeLayout>


                <View
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/graylight" />

                <!--TODO Pending-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp">

                    <TextView
                        android:id="@+id/pending_txt"
                        fontPath="fonts/SemiBold.otf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/likesgiven"
                        android:textColor="@color/mainlight"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/pending_txt"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_width="20dp"
                            android:layout_height="20dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_likeline" />
                        </FrameLayout>

                        <TextView
                            android:id="@+id/pending_likes_TV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="5dp"
                            android:text="0 Likes"
                            android:textColor="@color/txtcolor" />
                    </LinearLayout>
                </RelativeLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>



    <!--TODO Demo Layouts-->


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/mainlight"
        app:cardCornerRadius="10dp">

        <FrameLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/sendLikeID"
                fontPath="fonts/Bold.otf"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Like All Post"
                android:textColor="@color/white"
                android:textSize="16sp"

                />
        </FrameLayout>
    </androidx.cardview.widget.CardView>





</LinearLayout>