<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.WithdrawLikes_fragment"
    android:orientation="vertical">

    <!--TODO Earn Like container(Automatically option)-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_bg"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            fontPath="fonts/Bold.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/earnlikes"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView

            fontPath="fonts/light.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/likes_discription"
            android:textColor="@color/graylight" />

        <!--TODO Available, Pending -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
              android:layout_marginTop="20dp"
                android:layout_gravity="center"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center">

                    <!--TODO Available-->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp">

                        <TextView
                            android:id="@+id/avail_txt"
                            fontPath="fonts/SemiBold.otf"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/available"
                            android:textColor="@color/mainlight"
                            android:textSize="14sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/avail_txt"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal">

                            <FrameLayout
                                android:layout_width="20dp"
                                android:layout_height="20dp">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:src="@drawable/ic_likefill"
                                    android:tint="@color/red"
                                    />
                            </FrameLayout>

                            <TextView
                                android:id="@+id/aval_likes_TV"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingStart="5dp"
                                android:text="17 Likes"
                                android:textColor="@color/txtcolor" />
                        </LinearLayout>

                    </RelativeLayout>


                    <View
                        android:layout_width="1dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/graylight" />

                    <!--TODO Pending-->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="5dp">

                        <TextView
                            android:id="@+id/pending_txt"
                            fontPath="fonts/SemiBold.otf"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pending"
                            android:textColor="@color/mainlight"
                            android:textSize="14sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/pending_txt"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal">

                            <FrameLayout
                                android:layout_width="20dp"
                                android:layout_height="20dp">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:src="@drawable/ic_likeline" />
                            </FrameLayout>

                            <TextView
                                android:id="@+id/pending_likes_TV"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingStart="5dp"
                                android:text="0 Likes"
                                android:textColor="@color/txtcolor" />
                        </LinearLayout>
                    </RelativeLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>


    </LinearLayout>

    <!--TODO Instagram image show Recyclerview-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_gravity="center"
                android:gravity="center"

              >

           <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/imageRV"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_margin="10dp"
               />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>

</LinearLayout>